--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -2358,12 +2358,13 @@ boss__fluentd__centralized__fluentd_pv_spec_nfs: |-
 
 
 boss__fluentd__centralized__deployment_spec_template_containers_resources: |
-  # limits:
+  limits:
     cpu: "200m"
     memory: "900Mi"
   requests:
-    cpu: "0.05"
-    memory: "10Mi"
+    # cpu: "0.05"
+    cpu: "100m"
+    memory: "200Mi"
 
 boss__fluentd__centralized__serviceAccountName: "{{boss__fluentd__centralized__shared_name}}"
 boss__fluentd__centralized__deployment_spec_replicas: 1
