--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -3857,6 +3857,9 @@ boss__fluentd__centralized__logrotate_version: 1.3
 boss__fluentd__centralized__logrotate_image_repo: "blacklabelops/logrotate"
 boss__fluentd__centralized__logrotate_image_tag: "{{ boss__fluentd__centralized__logrotate_version }}"
 
+# https://container-solutions.com/kubernetes-deployment-strategies/
+boss__fluentd__centralized__deployment_spec_strategy: |-
+  type: Recreate
 
 ################# Persistent volume claims - begin #########################
 
@@ -3900,9 +3903,16 @@ boss__fluentd__centralized__deployment_spec_template_containers_resources: |
   requests:
     cpu: "0.05"
     memory: "10Mi"
+  # limits:
+  #   cpu: "2000m"
+  #   memory: "900Mi"
+  # requests:
+  #   # cpu: "0.05"
+  #   cpu: "1000m"
+  #   memory: "200Mi"
 
 boss__fluentd__centralized__serviceAccountName: "{{boss__fluentd__centralized__shared_name}}"
-boss__fluentd__centralized__deployment_spec_replicas: 3
+boss__fluentd__centralized__deployment_spec_replicas: 1
 
 # boss__fluentd__centralized__deployment_spec_template_containers_command: []
 
@@ -4006,6 +4016,11 @@ boss__fluentd__centralized__deployment_spec_template_metadata_labels: |-
 boss__fluentd__centralized__deployment_spec_template_metadata_annotations: |-
   prometheus.io/port: "{{boss__fluentd__centralized__promths_mtr_in_port}}"
   prometheus.io/scrape: "true"
+  # This annotation ensures that fluentd does not get evicted if the node
+  # supports critical pod annotation based priority scheme.
+  # Note that this does not guarantee admission on the nodes (#40573).
+  scheduler.alpha.kubernetes.io/critical-pod: ''
+  seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
 
 boss__fluentd__centralized__deployment_spec_template_containers_ports: |-
   - containerPort: {{boss__fluentd__centralized__promths_mtr_in_port}}
@@ -4034,7 +4049,7 @@ boss__fluentd__centralized__deployment_spec_template_initContainers: |-
 
 boss__fluentd__centralized__deployment_spec_template_containers_env: |-
   - name: FLUENTD_ARGS
-    value: "--no-supervisor"
+    value: "--no-supervisor -vv"
   # - name: FLUENT_ELASTICSEARCH_HOST
   #   value: "elasticsearch"
   # - name: FLUENT_ELASTICSEARCH_PORT
@@ -4076,6 +4091,9 @@ boss__fluentd__centralized__deployment_spec_template_containers_env: |-
   - name: TZ
     value: "UTC"
 
+  - name: RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR
+    value: "1.2"
+
 boss__fluentd__centralized__deployment_spec_template_spec_volumeMounts: |
   # fluentd work files; do not share with multiple instances
   - name: work
@@ -4098,6 +4116,12 @@ boss__fluentd__centralized__deployment_spec_template_spec_volumeMounts: |
 
   - name: templates-d
     mountPath: {{boss__fluentd__centralized__path_to_es_templates_inside_container}}
+
+  - name: buffers-d
+    mountPath: /buffers.d
+
+  - name: position-d
+    mountPath: /position.d
 
 boss__fluentd__centralized__deployment_spec_template_spec_volumes: |
   - name: work
@@ -4123,6 +4147,18 @@ boss__fluentd__centralized__deployment_spec_template_spec_volumes: |
   - name: templates-d
     configMap:
       name: {{boss__fluentd__centralized__shared_name}}-elasticseach-template
+
+  - name: buffers-d
+    hostPath:
+      # directory location on host
+      path: /buffers.d
+      type: DirectoryOrCreate
+
+  - name: position-d
+    hostPath:
+      # directory location on host
+      path: /position.d
+      type: DirectoryOrCreate
 
 boss__fluentd__centralized__deployment_spec_template_spec_sidcar_container: "disabled"
 
@@ -4161,6 +4197,7 @@ boss__fluentd__centralized__deployment_spec_template_spec_hostPID: True
 
 boss__fluentd__centralized__deployment_spec_template_spec_nodeSelector: |-
   beta.kubernetes.io/os: linux
+  kubernetes.io/hostname: "{{queen_host}}"
 
 # boss__fluentd__centralized__deployment_spec_template_spec_securityContext: "disabled"
 boss__fluentd__centralized__deployment_spec_template_spec_securityContext: |-
@@ -4171,7 +4208,7 @@ boss__fluentd__centralized__deployment_spec_template_spec_securityContext: |-
 boss__fluentd__centralized__deployment_spec_template_spec_containers_livenessProbe: |-
   tcpSocket:
     port: {{boss__fluentd__centralized__promths_mtr_in_port}}
-  initialDelaySeconds: 90
+  initialDelaySeconds: 300
   timeoutSeconds: 10
 
 
