--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -2679,6 +2679,54 @@ boss__fluentd__centralized__deployment_spec_template_spec_containers_livenessPro
   initialDelaySeconds: 300
   timeoutSeconds: 10
 
+boss__fluentd__centralized_configmap_fluentd_outputs: |-
+  <match unifi.syslog.**>
+    @type copy
+
+    <store>
+      @id elasticsearch
+      @type elasticsearch
+      @log_level info
+      type_name fluentd
+      include_tag_key true
+      host elasticsearch-logging
+      port 9200
+      logstash_format true
+      logstash_prefix logstash-unifi
+      index_prefix logstash-unifi
+      reload_on_failure true
+      reconnect_on_error true
+      template_file {{boss__fluentd__centralized__path_to_es_templates_inside_container}}/elasticsearch-template-es5x.json
+      template_name elasticsearch-template-es5x.json
+      <buffer>
+        @type file
+        flush_thread_count 8
+        path /buffers.d/fluentd.centralized.system.buffer
+        flush_mode interval
+        retry_type exponential_backoff
+        # flush_thread_count 2
+        flush_interval 5s
+        retry_forever
+        retry_max_interval 30
+        chunk_limit_size 16M
+        queue_limit_length 256
+        overflow_action block
+      </buffer>
+    </store>
+    <store>
+      @type stdout
+      output_type json
+    </store>
+    # <store>
+    #   @type flowcounter
+    #   @id applog_high_metrics
+    #   tag fluentd.apploghigh.metrics
+    #   aggregate all
+    #   count_keys *
+    #   unit minute
+    # </store>
+  </match>
+
 
 ##########################################################################################################
 # .########...######..##....##..######..##........#######...######............######..########.##....##.########.########.....###....##.......####.########.########.########.
