--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -4191,8 +4191,8 @@ boss__fluentd__centralized__ingress_annotations: |-
   nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
   traefik.frontend.rule.type: PathPrefix
 
-boss__fluentd__centralized__deployment_spec_template_spec_hostNetwork: True
-boss__fluentd__centralized__deployment_spec_template_spec_hostPID: True
+boss__fluentd__centralized__deployment_spec_template_spec_hostNetwork: False
+boss__fluentd__centralized__deployment_spec_template_spec_hostPID: False
 
 
 boss__fluentd__centralized__deployment_spec_template_spec_nodeSelector: |-
