WIP: refactored efk

--- a/extra_playbooks/roles/kubernetes-apps/efk/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/efk/tasks/main.yaml
@@ -10,11 +10,14 @@
     dest: "{{ boss__efk__manifest_path }}/{{ item }}"
   with_items:
     - "0elasticsearch-pvc.yaml"
+    - "0elasticsearch.service-account.yaml"
+    - "1elasticsearch.cluster-role.yaml"
+    - "2elasticsearch.role-binding.yaml"
+    - "elasticsearch-statefulset.yaml"
+    - "elasticsearch-service.yaml"
     - "elasticsearch-ingress.yaml"
     - "elasticsearch-curator-secret.yaml"
     - "elasticsearch-curator.yaml"
-    - "elasticsearch-service.yaml"
-    - "elasticsearch-statefulset.yaml"
     - "fluentd-es-configmap.yaml"
     - "fluentd-es-ds.yaml"
     - "kibana-deployment.yaml"
