--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -190,6 +190,10 @@ boss__efk__elasticsearch_subdomain: elasticsearch
 boss__efk__manifest_path: "{{manifest_dir_path}}/efk"
 boss__efk__namespace_name: kube-system
 boss__efk__deployment_name: efk
+boss__efk__shared_name: elasticsearch
+
+boss__efk__centralized__elasticsearch_pvc_spec_accessModes: |-
+  - ReadWriteMany
 
 
 ##########################################################################################################
@@ -201,31 +205,58 @@ boss__efk__deployment_name: efk
 #    .##.......##.......##.....##.##....##....##.....##..##....##.##....##.##.......##.....##.##....##..##....##.##.....##
 #    .########.########.##.....##..######.....##....####..######...######..########.##.....##.##.....##..######..##.....##
 ##########################################################################################################
+
+boss__efk__elasticsearch_ingress_spec_rules_http_paths: |
+  - path: /
+    backend:
+      serviceName: {{boss__efk__shared_name}}-logging
+      servicePort: 9200
+
 boss__efk__elasticsearch_ingress_annotations: |
   nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
   traefik.frontend.rule.type: PathPrefix
+
 boss__efk__elasticsearch_ingress_labels: |
-  k8s-app: elasticsearch-logging
+  k8s-app: {{boss__efk__shared_name}}-logging
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
   boss-part-of: efk
+
 boss__efk__elasticsearch_service_labels: |
-  k8s-app: elasticsearch-logging
+  k8s-app: {{boss__efk__shared_name}}-logging
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
   kubernetes.io/name: "Elasticsearch"
   boss-part-of: efk
+
+boss__efk__elasticsearch_service_annotations: "disabled"
+
+boss__efk__elasticsearch_service_spec_type: ClusterIP
+
+boss__efk__elasticsearch_service_spec_ports: |
+  - name: http
+    port: 9200
+    protocol: TCP
+    targetPort: db
+
+boss__efk__elasticsearch_service_spec_selector: |-
+  k8s-app: {{boss__efk__shared_name}}-logging
+
 boss__efk__elasticsearch_persistent_volume_claim_labels: |
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  k8s-app: elasticsearch-logging
+  k8s-app: {{boss__efk__shared_name}}-logging
   boss-part-of: efk
+
+boss__efk__elasticsearch_pvc_spec_storageClassName: "nfs-dynamic-class"
 boss__efk__elasticsearch_persistent_volume_claim_spec_resources_requests_storage: "1Gi"
+
 boss__efk__elasticsearch_persistent_volume_labels: |
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  k8s-app: elasticsearch-logging
+  k8s-app: {{boss__efk__shared_name}}-logging
   boss-part-of: efk
+
 boss__efk__elasticsearch_version: v5.6.2
 boss__efk__elasticsearch_image_repo: "bossjones/elasticsearch"
 boss__efk__elasticsearch_image_tag: "{{ boss__efk__elasticsearch_version }}"
@@ -233,6 +264,7 @@ boss__efk__elasticsearch_cpu_limit: 1000m
 boss__efk__elasticsearch_mem_limit: 3048Mi
 boss__efk__elasticsearch_cpu_requests: 100m
 boss__efk__elasticsearch_mem_requests: 2350Mi
+
 
 boss__efk__elasticsearch_stateful_set_env_ES_JAVA_OPTS: "-Xms2048 -Xmx2048"
 
@@ -247,36 +279,133 @@ boss__efk__elasticsearch_stateful_set_spec_resources: |
     memory: 4048Mi
 
 boss__efk__elasticsearch_service_account_labels: |
-    k8s-app: elasticsearch-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+  k8s-app: elasticsearch-logging
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
+
 boss__efk__elasticsearch_cluster_role_labels: |
-    k8s-app: elasticsearch-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+  k8s-app: elasticsearch-logging
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
 
 boss__efk__elasticsearch_cluster_role_binding_labels: |
-    k8s-app: elasticsearch-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+  k8s-app: elasticsearch-logging
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
 
 boss__efk__elasticsearch_stateful_set_labels: |
-    k8s-app: elasticsearch-logging
-    version: "{{boss__efk__elasticsearch_version}}"
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
-boss__efk__elasticsearch_stateful_set_spec_replicas: 1
-boss__efk__elasticsearch_stateful_set_spec_selector_match_labels: |
-        k8s-app: elasticsearch-logging
-        version: v5.6.2
-boss__efk__elasticsearch_stateful_set_spec_template_metadata_labels: |
-        k8s-app: elasticsearch-logging
-        version: v5.6.2
-        kubernetes.io/cluster-service: "true"
+  k8s-app: elasticsearch-logging
+  version: "{{boss__efk__elasticsearch_version}}"
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
+
+boss__efk__elasticsearch_statefulset_labels: |
+  k8s-app: elasticsearch-logging
+  version: "{{boss__efk__elasticsearch_version}}"
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
+
+boss__efk__elasticsearch_statefulset_spec_replicas: 1
+
+boss__efk__elasticsearch_statefulset_spec_matchLabels: |
+  k8s-app: elasticsearch-logging
+  version: "{{boss__efk__elasticsearch_version}}"
+
+boss__efk__elasticsearch_statefulset_spec_template_metadata_labels: |
+  k8s-app: elasticsearch-logging
+  version: "{{boss__efk__elasticsearch_version}}"
+  kubernetes.io/cluster-service: "true"
+
+boss__efk__elasticsearch_statefulset_spec_template_metadata_annotations: "disabled"
+
+boss__efk__elasticsearch_serviceAccountName: "{{boss__efk__shared_name}}-logging"
+
+boss__efk__elasticsearch_statefulset_spec_template_initContainers: |-
+  - image: alpine:3.6
+    command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
+    name: {{boss__efk__shared_name}}-logging-init
+    securityContext:
+      privileged: true
+
+boss__efk__elasticsearch_statefulset_spec_template_containers_env: |-
+  - name: "NAMESPACE"
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.namespace
+    # http.cors.enabled: true
+    # http.cors.allow-origin
+    # NOTE: Needed for: https://github.com/mobz/elasticsearch-head
+  # - name: HTTP_CORS_ENABLED
+  #   value: "true"
+  # - name: HTTP_CORS_ALLOW_ORIGIN
+  #   value: "*"
+  - name: MINIMUM_MASTER_NODES
+    value: "1"
+  - name: ES_JAVA_OPTS
+    # value: "-Xms1024m -Xmx1024m"
+    # value: "-Xms4048m -Xmx4048m"
+    value: "{{boss__efk__elasticsearch_stateful_set_env_ES_JAVA_OPTS}}"
+    # value: "-Xms256m -Xmx256m"
+  # - name: ES_HEAP_SIZE
+  #   # value: "-Xms1024m -Xmx1024m"
+  #   value: "1g"
+  #   # chmod g+rwx esdatadir
+  #   # chgrp 1000 esdatadir
+
+boss__efk__elasticsearch_statefulset_spec_template_spec_volumeMounts: |-
+  - name: {{boss__efk__shared_name}}-logging
+    mountPath: /data
+
+boss__efk__elasticsearch_statefulset_spec_template_containers_resources: |-
+  # need more cpu upon initialization, therefore burstable class
+  requests:
+    cpu: 100m
+    memory: 2350Mi
+  limits:
+    cpu: 1000m
+    memory: 4048Mi
+
+boss__efk__elasticsearch_statefulset_spec_template_spec_securityContext: |-
+  # runAsNonRoot: true
+  # runAsUser: 65534
+  privileged: true
+
+boss__efk__elasticsearch_statefulset_spec_template_spec_container_imagePullPolicy: "Always"
+
+boss__efk__elasticsearch_statefulset_spec_template_spec_containers_livenessProbe: "disabled"
+
+# boss__efk__elasticsearch_statefulset_spec_template_spec_containers_livenessProbe: |-
+#   httpGet:
+#     path: /
+#     port: 9200
+#   initialDelaySeconds: 120
+#   timeoutSeconds: 10
+
+boss__efk__elasticsearch_statefulset_spec_template_spec_containers_readinessProbe: "disabled"
+
+boss__efk__elasticsearch_statefulset_spec_template_containers_ports: |-
+  - containerPort: 9200
+    name: db
+    protocol: TCP
+  - containerPort: 9300
+    name: transport
+    protocol: TCP
+  - containerPort: 1099
+    name: jmx
+    protocol: TCP
+
+boss__efk__elasticsearch_statefulset_spec_template_spec_sidcar_container: "disabled"
+
+boss__efk__elasticsearch_statefulset_spec_template_spec_hostNetwork: "disabled"
+boss__efk__elasticsearch_statefulset_spec_template_spec_hostPID: "disabled"
+boss__efk__elasticsearch_statefulset_spec_template_spec_nodeSelector: "disabled"
+boss__efk__elasticsearch_statefulset_spec_volumeClaimTemplates: "disabled"
+
 
 #########################
 
