--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -336,10 +336,22 @@ boss__efk__elasticsearch_serviceAccountName: "{{boss__efk__shared_name}}-logging
 
 boss__efk__elasticsearch_statefulset_spec_template_initContainers: |-
   - image: alpine:3.6
-    command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
+    # command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
+    # Needed to enable memory_lock
+    # SOURCE: https://github.com/elastic/helm-charts/issues/7
+    command:
+      - /bin/sh
+      - -cxe
+      - |
+        /sbin/sysctl -w vm.max_map_count=262144
+        ulimit -l unlimited
     name: {{boss__efk__shared_name}}-logging-init
     securityContext:
       privileged: true
+      capabilities:
+        add:
+        - IPC_LOCK
+        - SYS_RESOURCE
 
 boss__efk__elasticsearch_statefulset_spec_template_containers_env: |-
   - name: "NAMESPACE"
@@ -364,6 +376,8 @@ boss__efk__elasticsearch_statefulset_spec_template_containers_env: |-
     value: "-Xms1152M"
   - name: DEFAULT_ES_JAVA_MAX_HEAP_SIZE
     value: "-Xmx1152M"
+  - name: bootstrap.memory_lock
+    value: "true"
     # value: "-Xms256m -Xmx256m"
   # - name: ES_HEAP_SIZE
   #   # value: "-Xms1024m -Xmx1024m"
@@ -393,6 +407,10 @@ boss__efk__elasticsearch_statefulset_spec_template_spec_securityContext: |-
   # runAsNonRoot: true
   # runAsUser: 65534
   privileged: true
+  capabilities:
+    add:
+    - IPC_LOCK
+    - SYS_RESOURCE
 
 boss__efk__elasticsearch_statefulset_spec_template_spec_container_imagePullPolicy: "Always"
 
